Publish the iffy post.

--- a/b/index.html
+++ b/b/index.html
@@ -85,17 +85,18 @@
 </header>
 
     
-    <p>If you’re interested in working together, these are the kinds of services I can provide.</p>
+    <p>I help managers, technicians, scientists and developers build quality software.</p>
+<h2 id="services">Services</h2>
 <ul>
-<li>Writing up a problem statement, investigating and proposing solutions.</li>
-<li>Assessing, prototyping and recommending a tech stack.</li>
-<li>Getting setup for software development.</li>
-<li>Automating builds and deployments.</li>
+<li>Writing up and posing problems, investigating and proposing solutions.</li>
+<li>Assessing, prototyping and recommending tech stacks.</li>
+<li>Setting up development environments, automating builds and deployments.</li>
 <li>Contributing fixes, raising, commenting on and triaging issues.</li>
 <li>Testing what works now and discovering new failures.</li>
-<li>Fresh coding and untangling knotty codebases.</li>
 <li>Mentoring, coaching and training.</li>
 </ul>
+<p>I’m happy doing first commits and untangling knotty codebases.</p>
+<p>Have questions? Please get in touch using the coordinates below.</p>
 </article>
 
                     <hr />
