--- a/p/index.html
+++ b/p/index.html
@@ -92,9 +92,11 @@
 <li>Muscle memory and good technique will get you there faster.</li>
 <li>Being on the sharp end is more exciting.</li>
 </ul>
-<p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. I’ve learnt a lot since then.</p>
-<p>I’ve been disorientated debugging objects with nested state and shared state. Sure the scope of changes can be restricted among methods partitioned into public, private, protected and internal groups but that doesn’t really help that much.</p>
-<p>I have reorientated towards first class functions, algebraic data types, persistent data structures and lazy evaluation. Development life is much simpler now.</p>
+<p>I like fifth class terrain and first class functions.<br />
+I like boulder problems, route finding and algebraic data types.<br />
+I like leave no trace and persistent data structures.<br />
+I like rest days and lazy evaluation.<br />
+I like pattern matching.</p>
 </article>
 
                     <hr />
