Don't publish drafts.

--- a/reviews/2022-01-19-z3-tracing.html
+++ b/reviews/2022-01-19-z3-tracing.html
@@ -45,7 +45,7 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="../blog/">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="../review/">reviews</a></li>
         </ul>
     </nav>
 </div>
@@ -762,7 +762,7 @@ ___ | justReadSExpr sexpr = let Just (e, _) = SMT.readSExpr sexpr in e
 <li id="fn2" role="doc-endnote"><p>Uniques are unique identifiers used for “fast ordering and equality tests” in GHC. The function used to get these when encoding is <code>getUnique :: a -&gt; Unique</code>.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
-    <div id="copyright">&copy; 2013-2021 Block Scope</div>
+    <div id="copyright">&copy; 2013-2022 Block Scope</div>
 
 </article>
 
