--- a/reviews/2022-01-12-units-smt.html
+++ b/reviews/2022-01-12-units-smt.html
@@ -45,7 +45,7 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="../blog/">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="../review/">reviews</a></li>
         </ul>
     </nav>
 </div>
@@ -904,7 +904,7 @@ solved = [(Eq# @[Unit, Unit,
 <li id="fn3" role="doc-endnote"><p>Not shown are calls to the plugin want to solve constraints for <code>?callStack</code>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
-    <div id="copyright">&copy; 2013-2021 Block Scope</div>
+    <div id="copyright">&copy; 2013-2022 Block Scope</div>
 
 </article>
 
