Publish update to CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -73,7 +73,18 @@
 <br />
 <div class="work-history">
 <h2 class="work-section">
-&lt;F#, Elm, Haskell &amp; SQL&gt;
+&lt;Haskell&gt;
+</h2>
+<ul>
+<li>
+<span class="blobs"><code>B</code> <code>†</code> ▩ </span><span class="date"><code>2021/12—2022/03</code></span> <a href="https://github.com/BlockScope/plugins-for-blobs"><strong>Plugins for Blobs</strong></a> ☞ Type check units of measure with SMT solving.
+</li>
+<li>
+<span class="flaretiming"><code>F</code> <code>†</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> scoring flying competitions ☞ Ask <a href="https://github.com/BlockScope/CIVL-GAP/issues">how</a> how to interpret some <a href="https://github.com/BlockScope/CIVL-GAP#readme">rules</a> typesetting them in LaTeX. Develop a <a href="https://github.com/BlockScope/flare-timing#readme">reference</a> implementation. Publish comparisons of implementations.
+</li>
+</ul>
+<h2 class="work-section">
+&lt;F#, Elm &amp; SQL&gt;
 </h2>
 <ul>
 <li>
@@ -81,9 +92,6 @@
 </li>
 <li>
 <span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Prototype an app for interpreting <a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced ultrasound</a>.
-</li>
-<li>
-<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> scoring flying competitions ☞ Ask <a href="https://github.com/BlockScope/CIVL-GAP/issues">how</a> how to interpret some <a href="https://github.com/BlockScope/CIVL-GAP#readme">rules</a> typesetting them in LaTeX. Develop a <a href="https://github.com/BlockScope/flare-timing#readme">reference</a> implementation. Publish comparisons of implementations.
 </li>
 <li>
 <span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> monitoring breaches of regulated levels of water take and pollutant discharge ☞ Design a database schema, unmunging and migrating data. Pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a>. Expose web services over relational and time series data. Develop web apps for admins and farmers. Pull data and emit LaTeX to typeset PDF reports.
@@ -142,12 +150,12 @@
 <ul>
 <pre>
 <code>
-                                                         <span class="cactus">CC</span>
-                                           <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
-                              <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
-    <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span>
- <span class="date">~~~|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+~~~</span>
- <span class="date">  1995           2000           2005           2010           2015           2020</span>
+                                                        <span class="cactus">CC</span>
+                                          <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
+                             <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
+   <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span><span class="blobs">BB</span>
+ <span class="date">~~|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+-~~</span>
+ <span class="date"> 1995           2000           2005           2010           2015           2020</span>
 </code>
 </pre>
 </article>
@@ -170,7 +178,7 @@
         <i class="fas fa-phone"></i> +1-450-675-9180<br />
         <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br />
         <br />
-        <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
+        <pre><code><span class="date">&dollar;=full-time, #=part-time, †=self-funded</span></code></pre>
     </address>
 </div>
 <div class="col-4">
