Upgrade bootstrap to 5, responsive layout.

--- a/draft/index.html
+++ b/draft/index.html
@@ -39,7 +39,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card d-print-none">
+                <div id="nav-side" class="col-3 card d-print-none">
                     <div class="card-body">
     <h1 class="card-title" title="block scope delimited with curlies">{<a href="../">...</a>}</h1>
 
