--- a/index.html
+++ b/index.html
@@ -84,7 +84,20 @@
     </table>
 </header>
 
-    <div class="fluid-container">
+    <div class="d-lg-none">
+<div class="fluid-container">
+<div class="align-self-left" style="padding-left: 0">
+<p>I go by two monikers on the interwebs:</p>
+<ul>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
+</ul>
+<p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
+</div>
+</div>
+</div>
+<div class="d-none d-lg-block">
+<div class="fluid-container">
 <div class="row">
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
@@ -156,7 +169,20 @@
     </table>
 </header>
 
-    <div class="fluid-container">
+    <div class="d-lg-none">
+<div class="fluid-container">
+<div class="align-self-left" style="padding-left: 0">
+<p>I go by two monikers on the interwebs:</p>
+<ul>
+<li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
+<li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
+</ul>
+<p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
+</div>
+</div>
+</div>
+<div class="d-none d-lg-block">
+<div class="fluid-container">
 <div class="row">
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
